Fix bugs 45198, 45436 & 45518